--- a/notification.html
+++ b/notification.html
@@ -5,10 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
-    <title>Alerts</title>
+    <title>Notifications</title>
 </head>
 <body>
-    <h1>Hello Alerts</h1>
+    <h1 class="ms-3">Badges</h1>
+    <section>
+        <button type="button" class="btn btn-primary position-relative ms-5">
+            Bandeja de entrada
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+              27+
+              <span class="visually-hidden">unread messages</span>
+            </span>
+          </button>
+    </section>
+
+    <section class="container">
+        <section id="my-element" class="p-5 shadow mt-5 bg-light">
+            <h1 class="text-center">Function of Badges</h1>
+            <p class="text-center">Draws user's attention to a certain element.</p>
+        </section>
+    </section>
+
+    <h1 class="ms-3">Spinners</h1>
+
+    <div class="spinner-border text-warning ms-5"  role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+
+    <section class="container">
+        <section id="my-element" class="p-5 shadow mt-5 bg-light">
+            <h1 class="text-center">Function of Spinners</h1>
+            <p class="text-center">Give a graphic way to visualize a loading.</p>
+        </section>
+    </section>
+
+    <section>
+        <button class="btn btn-light mt-5 ms-5 mx-auto" style="width:200px;" >
+            <a href="./index.html" class="text-decoration-none">Go Back</a>
+        </button>
+    </section>
 </body>
 <script src="../../bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
 </html>
