--- a/card.html
+++ b/card.html
@@ -10,7 +10,7 @@
 <body>
     
    
-        <section>
+        <section style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">
             <div class="card ms-3" style="width: 18rem;">
                 <img src="../../Bootstrap-Components-main/Bootstrap_Components_Final_Project/css/Stitch-sit.jpg"
                 <div class="card-body">
@@ -24,7 +24,7 @@
         <section class="container">
             <section id="my-element" class="p-5 shadow mt-5 bg-light">
                 <h1 class="text-center">Function of Card</h1>
-                <p class="text-center">The functionality of the card is to show a grapchi representation of an element.</p>
+                <p class="text-center">The functionality of the card is to show a graphic representation of an element.</p>
             </section>
         </section>
         
