--- a/information.html
+++ b/information.html
@@ -8,8 +8,8 @@
     <title>Information</title>
 </head>
 <body>
-    <h1 class="ms-3">Breadcrumps</h1>
-        <section class="ms-5"> 
+    <h1 class="ms-3" style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">Breadcrumps</h1>
+        <section class="ms-5" style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;"> 
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="#">Pagina Principal</a></li>
@@ -25,8 +25,8 @@
             </section>
         </section>
 
-        <h1 class="ms-3">Pagination</h1>
-        <section class="ms-5">
+        <h1 class="ms-3" style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">Pagination</h1>
+        <section class="ms-5" style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">
             <nav aria-label="...">
                 <ul class="pagination pagination-lg">
                   <li class="page-item active" aria-current="page">
