--- a/notification.html
+++ b/notification.html
@@ -8,42 +8,43 @@
     <title>Notifications</title>
 </head>
 <body>
-    <h1 class="ms-3">Badges</h1>
-    <section>
-        <button type="button" class="btn btn-primary position-relative ms-5">
-            Bandeja de entrada
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              27+
-              <span class="visually-hidden">unread messages</span>
-            </span>
-          </button>
-    </section>
+        <h1 class="ms-3" style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">Badges</h1>
+        <section style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">
+            <button type="button" class="btn btn-primary position-relative ms-5">
+                Bandeja de entrada
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                27+
+                <span class="visually-hidden">unread messages</span>
+                </span>
+            </button>
+        </section>
 
-    <section class="container">
-        <section id="my-element" class="p-5 shadow mt-5 bg-light">
-            <h1 class="text-center">Function of Badges</h1>
-            <p class="text-center">Draws user's attention to a certain element.</p>
+        <section class="container">
+            <section id="my-element" class="p-5 shadow mt-5 bg-light">
+                <h1 class="text-center">Function of Badges</h1>
+                <p class="text-center">Draws user's attention to a certain element.</p>
+            </section>
+        </section>
+
+        <h1 class="ms-3" style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">Spinners</h1>
+    <section style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">
+        <div class="spinner-border text-warning ms-5"  role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+
+        <section class="container">
+            <section id="my-element" class="p-5 shadow mt-5 bg-light">
+                <h1 class="text-center">Function of Spinners</h1>
+                <p class="text-center">Give a graphic way to visualize a loading.</p>
+            </section>
         </section>
     </section>
 
-    <h1 class="ms-3">Spinners</h1>
-
-    <div class="spinner-border text-warning ms-5"  role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-
-    <section class="container">
-        <section id="my-element" class="p-5 shadow mt-5 bg-light">
-            <h1 class="text-center">Function of Spinners</h1>
-            <p class="text-center">Give a graphic way to visualize a loading.</p>
+        <section>
+            <button class="btn btn-light mt-5 ms-5 mx-auto" style="width:200px;" >
+                <a href="./index.html" class="text-decoration-none">Go Back</a>
+            </button>
         </section>
-    </section>
-
-    <section>
-        <button class="btn btn-light mt-5 ms-5 mx-auto" style="width:200px;" >
-            <a href="./index.html" class="text-decoration-none">Go Back</a>
-        </button>
-    </section>
 </body>
 <script src="../../bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
 </html>
