--- a/Tarea Tablas.html
+++ b/Tarea Tablas.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="../../bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
-    <title>Tarea</title>
+    <title>Tablas</title>
 </head>
 
 <header class="header">
