--- a/placeholders.html
+++ b/placeholders.html
@@ -22,7 +22,7 @@
               </div>
               
               <div class="card" aria-hidden="true" >
-                <img src="../Bootstrap_Components_Final_Project/css/Stitch-sit.jpg" class="card-img-top w-25" alt="Stitch style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 3rem;">
+                <img src="../Bootstrap_Components_Final_Project/css/Stitch-sit.jpg" class="card-img-top w-25" alt="Stitch >
                 <div class="card-body">
                   <h5 class="card-title placeholder-glow">
                     <span class="placeholder col-6"></span>
